# seo

./: .gitignore  .prettierrc  CLAUDE.md  Cargo.toml  Dioxus.toml  Makefile.toml  README.md  Some.md  eslint.config.mts  graph.dot  input.css  next.config.mjs  next.config.ts  package-lock.json  package.json  react-doctor.config.json  tsconfig.json  vitest.config.ts  wdio.conf.js
src-tauri/: .gitignore  .sqls.yml  .sqlx_dev.db  Cargo.toml  analysis.db  bacon.toml  build.rs  tauri.conf.json
src-tauri/.sqlx/: query-00d3e3dfe846e9a7dabfe355e220b80919883e7d58b3ee2680eeda790bb4f1ba.json  query-03bb09e96004acade05c836ee679c8366083f7db8066a782d3c6293572270ea3.json  query-05adec799667a8efe08f6fa8650a23a72c15a40b7dba6181278e0e21efdb4c80.json  query-07acf73cf391d2c5ba9edff5612ef79d75648875c6b93dd217c3b2331be019d2.json  query-08aa34fc1d0b62e45909000ebec5ba590a496e912baecb8f0d38e80cbe2eab8d.json  query-0df08ccef7bed2e5d7bbe1eb26d3186a3fb3c7102ddf1c22310c5ad66f976534.json  query-0e5e0b13805cb6c4a1b2330d701f40b0384beca139e97400139ad8d5a06e364f.json  query-0eca764e9b6d4f94e5372a7fb21fa104880a2c499b1d265541668fd356d396d6.json  query-10436fc2d01a67f2c6167dc73956256c15cc0ed8e43ba42c411476dd8d5b4810.json  query-18d4199b2b4ed98ec6cd1cdb2405fbbb55b9d7cbcb3f402bc7d5c0c48c4127e7.json  query-1bb2ce7da8d4667ef2eb8ef43460405649a82c8df20fa96ce3ba4750cf23aac5.json  query-1df2f84946b5007015019d4306d134c33b7ad5d770c7f0f8f8c03b848510e8e7.json  query-20726a3302428413a4f3cd44e61db4fc576a0f17fed64947a6b76d265bbe8360.json  query-207ccd5970304c614aec66c0d50bc5f482089c5c30a8a8dec0ad4a2e05769766.json  query-212b8ab15aaf3c9cbbeed92b7182302c8a27abe103b93e3238258375d204d26a.json  query-21cdd734ab43a858393216c8494c98539720f9292f9b4362d236b32016ccdfed.json  query-24eed9804d4d9c9a9a261b7ca959b0b34b2f5dc413faf63f826da7f666ea5a70.json  query-26c20d2553f5d634d23455f2b633575cafd413f6eeac4f3c48f1c736c21448ee.json  query-28fc94a1f187bd0ac90e9ec44004f33f1bae9b10b23e562f94ea65acdd33e9df.json  query-29d48957a69b24feb395f0462c62e1094017ebf8fc6c7db219926055b8fec9e8.json  query-2d239f638f6d890d2a5977f4423c2fa1b7f9085029b6e1f403b623796ac47a65.json  query-2e7c6a5d6044f75c764c893ea0280d2c3131f78266e55d4a49dc80d4bfc1e461.json  query-2f5c76b358e8af4d5c916a10c0fb8c7fa61ea10124d5b7aba5ba7f32d16d7627.json  query-30149346c1201621ce5e9c76e3562aeda6a8700aec19f9deb6e5bba1a212a791.json  query-32b320bfc12d15d286dbf8c6d50f519d1a7cee0d8ac52eb6f186c936dd5f6a48.json  query-35e265f833773767ccb6d136502e323fe98180a54eccb2a9850a753827eb6750.json  query-37a036e3cbae9c08f084df261a04b77f0dd787cecf774cc95ab3af054a768d46.json  query-37fb10bc3f4462b3e1036df7e4b508c56ec7edfc5c6bf5f1e267309bd24b0142.json  query-3b3ff8aacc614edd732ad3facbac4398b4299c409e0fd66c11ece3a218933a39.json  query-3d885ce81970e3ccd4b93d59a392d480f305f67b2ea285216ae74a1d1dfd25ed.json  query-3fe0496e579dcedc02ea55f627c039e75fa3213693e48f1ef840ea57a5be4a55.json  query-40347dc0eaa10bf05830af52d3da00db5191a325fc3a4c3ebe7684c05693c6b6.json  query-42b2ddd6fe3fa8cd9d901fb7b5557ca29753184cf409f1773d88009c0ddc6425.json  query-44383e4224ea32e097f132eb47faa196097b4701bf96ac420e56d6d6bbd4801b.json  query-44bde68fc4fec4f4da2b8e29303c1fe59e41e75e84e102029bd4c73118681fbc.json  query-472cd4233ad13b2d127349c572be0c7e7858d343cb5ee72a0a28da3d619bdf55.json  query-4a70a4415f4c4baa2b72b24a85b6b1d7aa91d5796002fa3c160c506c57a9fe5a.json  query-4bc88271aec4928162d7f223c15e1d3a28435f230a9c4797db7c50bf74f4688d.json  query-4be432dcca4f97fd19482fb7ec89f247b6557fa0955962116503e08d883afb74.json  query-4f90e42550ce30e4aa653bee8bfe83f15927a6bcb2cbd8ff3263ff5a157de396.json  (+77 more)
src-tauri/addon-macros/: Cargo.toml
src-tauri/addon-macros-impl/: Cargo.toml
src-tauri/benches/: database_benchmarks.rs
src-tauri/bindings/: CompleteAnalysisResult.ts  HeadingElement.ts  ImageElement.ts  LinkType.ts
src-tauri/capabilities/: default.json
src-tauri/examples/: generate_license.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_tables.sql  0002_convert_to_datetime_analysis_result.sql  0003_create_page_edge.down.sql  0003_create_page_edge.up.sql  0004_create_settings.up.sql  0005_add_system_prompt.down.sql  0005_add_system_prompt.up.sql  0006_split_prompt_settings.down.sql  0006_split_prompt_settings.up.sql  0007_add_context_options.down.sql  0007_add_context_options.up.sql  0008_add_prompt_blocks.down.sql  0008_add_prompt_blocks.up.sql  0010_add_gemini_enabled.down.sql  0010_add_gemini_enabled.up.sql  0013_page_edge_index.up.sql  (+55 more)
(+621 files in other folders)
