[package]
name = "app"
version = "0.2.7"
description = "SEOINSKT"
authors = ["Ibrahim"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.89"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.4", features = [] }
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }

rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "sqlite", "migrate", "chrono"] }
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
url = "2.5.7"
reqwest = { version = "0.12.24", features = ["json"] }
scraper = "0.24.0"
mockito = "1.7.0"
tokio-test = "0.4.4"
quick-xml = "0.38.4"
async-trait = "0.1.89"
dashmap = "6.1.0"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
