[package]
name = "app"
version = "0.4.7"
description = "SEOINSKT"
authors = ["Ibrahim"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.89"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "process"] }
uuid = { version = "1.11.0", features = ["v4"] }

rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "sqlite", "migrate", "chrono" ] }
anyhow = "1.0.100"
url = "2.5.7"
scraper = "0.24.0"
quick-xml = "0.38.4"
async-trait = "0.1.89"
dashmap = "6.1.0"
tauri-plugin-shell = "2.3.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "tracing-log"] }
rquest-util = "2.2.1"
rquest = { version = "5.1.0", features = ["cookies", "json"] }
futures = "0.3.31"
thiserror = "1.0"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["serde_json"] }
addon-macros = { path = "addon-macros" }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
machine-uid = "0.5.4"
hex = "0.4.3"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
mock-licensing = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.internal]
inherits = "release"

[dev-dependencies]
tauri = { version = "2.10.2", features = ["test"] }
criterion = { version = "0.8.1", features = ["async_tokio"] }
tokio-test = "0.4.4"
mockito = "1.7.0"

[[bench]]
name = "database_benchmarks"
harness = false
